syntax = "proto3";
package kk_etcd_models;
option go_package = "github.com/cruvie/kk_etcd_go/kk_etcd_models";
import "kk_etcd_models/pb_server_registration.proto";

message PBServer {
  kk_etcd_models.PBServerRegistration ServerRegistration = 1;
  enum ServerStatus {
    UnKnown = 0;
    Running = 1;
    Stop = 2;
  }
  ServerStatus Status = 5;
}

message PBListServer  {
  repeated PBServer ListServer = 1;
}