syntax = "proto3";
package kk_etcd_models;
option go_package = "github.com/cruvie/kk_etcd_go/kk_etcd_models";
import "kk_etcd_models/pb_service_registration.proto";

message PBService {
  kk_etcd_models.PBServiceRegistration ServiceRegistration = 1;
  enum ServiceStatus {
    UnKnown = 0;
    Running = 1;
    Stop = 2;
  }
  ServiceStatus Status = 5;
}

message PBListService  {
  repeated PBService ListService = 1;
}